--- a/libs/base/colors.less
+++ b/libs/base/colors.less
@@ -32,7 +32,7 @@
 @gray-5:            		lighten(@black, 75%); 	// #DFDFDF
 @gray-6:            		lighten(@black, 87.5%); // #F8F8F8
 @gray-6-5:          		#f2f2f2;
-@gray-7:            		lighten(@black, 92.5%); // #ECECEC
+@gray-7:            		lighten(@black, 93.5%); // #EEEEEE
 @white:                 	#FFF;
 
 // Brand colours
