--- a/libs/site.less
+++ b/libs/site.less
@@ -37,7 +37,7 @@
 	@import "existing/inc/cookie-monster";
 	@import "existing/inc/skip-nav";
 	@import "existing/inc/main-nav";
-	@import "existing/inc/breadcrumb";
+	//@import "existing/inc/breadcrumb";
 	@import "existing/inc/section-notice";
 	@import "existing/inc/main-content";
 	@import "existing/inc/page-info";
@@ -86,7 +86,7 @@
 		@import "existing/inc/beta/status";
 		@import "existing/inc/beta/sidebar-navigation";
 		@import "existing/inc/beta/sidebar-navigation-accordion";
-		@import "existing/inc/beta/breadcrumb";
+		//@import "existing/inc/beta/breadcrumb";
 		@import "existing/inc/beta/section-notice";
 		@import "existing/inc/beta/panels";
 		@import "existing/inc/beta/extent-switcher";
