--- a/public/css/site.css
+++ b/public/css/site.css
@@ -3712,95 +3712,6 @@ html[lang="en-SCT"] .main-nav {
     display: none!important;
   }
 }
-.main-breadcrumb {
-  max-width: 1080px;
-  margin: auto;
-  padding: 0 1em;
-  margin-top: 1em;
-  margin-bottom: 1em;
-  clear: left;
-}
-@media (max-width: 479px) {
-  .main-breadcrumb {
-    display: none;
-  }
-}
-@media (max-width: 1148px) and (min-width: 480px) {
-  .js .main-breadcrumb {
-    padding-right: 3.5em;
-  }
-}
-.breadcrumb__item {
-  white-space: nowrap;
-}
-@media (max-width: 479px) {
-  .breadcrumb__item {
-    white-space: normal;
-  }
-}
-.ie8 .breadcrumb__item {
-  display: inline-block;
-}
-.breadcrumb__item > i {
-  margin: .5em;
-}
-.breadcrumb__extent-link {
-  background-color: #ffffff;
-  color: #000;
-  padding: .1em .5em;
-  white-space: nowrap;
-  display: inline-block;
-}
-.breadcrumb__extent-link:link {
-  color: #000;
-  text-decoration: none;
-}
-.breadcrumb__extent-link i {
-  background: #004b88;
-  color: #fff;
-  margin: -0.1em -0.5em -0.1em 1em;
-  padding: .2em .3em;
-  display: inline-block;
-}
-.js .breadcrumb__extent-link {
-  cursor: default;
-}
-.breadcrumb__extent-popup {
-  border-top: 6px solid #134172;
-  box-shadow: 3px 3px 10px #5c5c5c;
-  background: #fff;
-  position: absolute;
-  padding: .5em 1em;
-  z-index: 1;
-  max-width: 400px;
-  margin-top: 1em;
-}
-.ie8 .breadcrumb__extent-popup {
-  border: 1px solid #134172;
-  border-top-width: 6px;
-}
-.breadcrumb__extent-popup p,
-.breadcrumb__extent-popup ul {
-  margin: .5em 0;
-}
-.breadcrumb__extent-popup li {
-  margin: 0;
-}
-.breadcrumb__extent-popup__arrow {
-  border-left: 10px solid transparent;
-  border-right: 10px solid transparent;
-  border-bottom: 10px solid #134172;
-  position: absolute;
-  /* We actually position this in JS as Chrome and Firefox cannot agree how position
-     inside a display: table element with borders
-     The following works correctly in Chrome and IE    
-  */
-  top: 0;
-  /* Create a slight overlap to hide any gap while zooming */
-  margin-top: -9px;
-  /* Firefox is created jagged arrows.  This fixes it*/
-  -moz-transform: scale(0.9999);
-}
 .section-notice {
   background: #ffebc6;
 }
@@ -7281,7 +7192,7 @@ ul li {
   color: #000000;
 }
 .swatch.swatch--mono--gray7 {
-  background-color: #ececec;
+  background-color: #eeeeee;
   color: #000000;
 }
 .swatch.swatch--mono--white {
@@ -7545,39 +7456,6 @@ blockquote p.lighten {
 .beta-dap-menu-accordion__page:hover {
   color: #32457e;
   background-color: #bfbfbf;
-}
-/**
- * Breadcrumb.
- *
- * Beta breadcrumb amends.
- * Functional changes to be made in
- */
-.main-breadcrumb {
-  background-color: #bfbfbf;
-  padding: 0;
-  margin-top: 0;
-  max-width: none;
-  width: 100%;
-}
-.main-breadcrumb .main-breadcrumb__content.breadcrumb {
-  width: 1080px;
-  margin: 0 auto;
-  background-color: transparent;
-}
-.main-breadcrumb .breadcrumb__extent-link {
-  display: none;
-}
-.main-breadcrumb .breadcrumb__item {
-  font-size: 1em;
-  color: #d2deed;
-  line-height: 3;
-}
-.main-breadcrumb .breadcrumb__item > i {
-  margin: 0;
-}
-.main-breadcrumb .breadcrumb__item a {
-  padding: 0em 0.5em 0 0;
-  color: #191926;
 }
 .main-breadcrumb + .section-notice {
   margin-top: 0;
@@ -8572,7 +8450,6 @@ li.ref-dialog__list-item--highlight {
 .breadcrumb {
   background-color: #ffffff;
   padding: 0;
-  margin-top: 1rem;
   font-size: 1rem;
 }
 .breadcrumb p {
@@ -8590,6 +8467,120 @@ li.ref-dialog__list-item--highlight {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
   background-color: #ffffff;
+}
+.main-breadcrumb {
+  max-width: 1080px;
+  margin: auto;
+  padding: 0 1em;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  clear: left;
+  background-color: #eeeeee;
+  padding: 0;
+  margin-top: 0;
+  max-width: none;
+  width: 100%;
+}
+.main-breadcrumb .main-breadcrumb__content.breadcrumb {
+  width: 1080px;
+  margin: 0 auto;
+  background-color: transparent;
+}
+.main-breadcrumb .breadcrumb__extent-link {
+  display: none;
+}
+.main-breadcrumb .breadcrumb__item {
+  font-size: 1em;
+  color: #d2deed;
+  line-height: 3;
+}
+.main-breadcrumb .breadcrumb__item > i {
+  margin: 0;
+}
+.main-breadcrumb .breadcrumb__item a {
+  padding: 0em 0.5em 0 0;
+  color: #191926;
+}
+@media (max-width: 479px) {
+  .main-breadcrumb {
+    display: none;
+  }
+}
+@media (max-width: 1148px) and (min-width: 480px) {
+  .js .main-breadcrumb {
+    padding-right: 3.5em;
+  }
+}
+.breadcrumb__item {
+  white-space: nowrap;
+}
+@media (max-width: 479px) {
+  .breadcrumb__item {
+    white-space: normal;
+  }
+}
+.ie8 .breadcrumb__item {
+  display: inline-block;
+}
+.breadcrumb__item > i {
+  margin: .5em;
+}
+.breadcrumb__extent-link {
+  background-color: #ffffff;
+  color: #000;
+  padding: .1em .5em;
+  white-space: nowrap;
+  display: inline-block;
+}
+.breadcrumb__extent-link:link {
+  color: #000;
+  text-decoration: none;
+}
+.breadcrumb__extent-link i {
+  background: #004b88;
+  color: #fff;
+  margin: -0.1em -0.5em -0.1em 1em;
+  padding: .2em .3em;
+  display: inline-block;
+}
+.js .breadcrumb__extent-link {
+  cursor: default;
+}
+.breadcrumb__extent-popup {
+  border-top: 6px solid #134172;
+  box-shadow: 3px 3px 10px #5c5c5c;
+  background: #fff;
+  position: absolute;
+  padding: .5em 1em;
+  z-index: 1;
+  max-width: 400px;
+  margin-top: 1em;
+}
+.ie8 .breadcrumb__extent-popup {
+  border: 1px solid #134172;
+  border-top-width: 6px;
+}
+.breadcrumb__extent-popup p,
+.breadcrumb__extent-popup ul {
+  margin: .5em 0;
+}
+.breadcrumb__extent-popup li {
+  margin: 0;
+}
+.breadcrumb__extent-popup__arrow {
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-bottom: 10px solid #134172;
+  position: absolute;
+  /* We actually position this in JS as Chrome and Firefox cannot agree how position
+     inside a display: table element with borders
+     The following works correctly in Chrome and IE    
+  */
+  top: 0;
+  /* Create a slight overlap to hide any gap while zooming */
+  margin-top: -9px;
+  /* Firefox is created jagged arrows.  This fixes it*/
+  -moz-transform: scale(0.9999);
 }
 /**
  * Creates various callout styles using mixin
@@ -9799,7 +9790,7 @@ input[type="file"]::before {
   border-radius: 2px;
   border: 1px solid #dfdfdf;
   z-index: -1;
-  background-color: #ececec;
+  background-color: #eeeeee;
 }
 .radio input:hover:before,
 .checkbox input:hover:before {
@@ -9812,8 +9803,8 @@ input[type="file"]::before {
 .radio input:disabled:before,
 .checkbox input:disabled:before {
   cursor: not-allowed !important;
-  background-color: #ececec;
-  border-color: #ececec;
+  background-color: #eeeeee;
+  border-color: #eeeeee;
 }
 .radio input:checked:before,
 .checkbox input:checked:before {
@@ -9848,7 +9839,7 @@ input[type="file"]::before {
 .disabled {
   cursor: not-allowed !important;
   color: #9f9f9f;
-  background-color: #ececec;
+  background-color: #eeeeee;
   border: none;
   resize: none;
 }
@@ -9866,7 +9857,7 @@ button[type="submit"]:hover {
 .steps {
   padding: 0 1rem 0.75rem 1rem;
   margin: 0.75rem 0;
-  background-color: #ececec;
+  background-color: #eeeeee;
   color: #191926;
   border: 0px #bfbfbf solid;
   display: block;
@@ -9906,7 +9897,7 @@ button[type="submit"]:hover {
   padding: 0.75rem 4.5rem 0.75rem 1rem;
   margin: 0.75rem -1rem -0.75rem -1rem !important;
   border: none;
-  background-color: #dfdfdf;
+  background-color: #e2e2e2;
   color: #191926;
   border-bottom: 1px solid #bfbfbf;
   text-decoration: none !important;
@@ -9917,7 +9908,7 @@ button[type="submit"]:hover {
   font-family: 'FontAwesome';
   content: "\f054";
   color: #191926;
-  background-color: #d2d2d2;
+  background-color: #d5d5d5;
   height: 100%;
   position: absolute;
   right: 0;
@@ -9927,11 +9918,11 @@ button[type="submit"]:hover {
   text-align: center;
 }
 .steps .callout__link:hover {
-  background-color: #d2d2d2;
+  background-color: #d5d5d5;
   color: #191926;
 }
 .steps .callout__link:hover:after {
-  background-color: #b9b9b9;
+  background-color: #bbbbbb;
 }
 .steps .callout__link--anchor:after {
   content: "\f063";
