--- a/libs/base/colors.less
+++ b/libs/base/colors.less
@@ -61,9 +61,9 @@
 @beta-green-lighter:        lighten(@beta-green, 60%); // NEEDS TO BE CHECKED
 @beta-blue:      			#003C64;
 @beta-blue-light:       	#A5BDDC;
-@beta-blue-lighter:  		lighten(@beta-blue-light, 15%);
+//@beta-blue-lighter:  		lighten(@beta-blue-light, 15%);
 //@beta-blue-light:       	#dce5f1;
-//@beta-blue-lighter:  		lighten(@beta-blue, 70%);
+@beta-blue-lighter:  		lighten(@beta-blue, 70%);
 @beta-aqua:             	#81CEC6;
 @beta-aqua-light:          	lighten(@beta-aqua, 15%);
 @beta-yellow:           	#FFBF47;
