--- a/libs/existing/inc/header.less
+++ b/libs/existing/inc/header.less
@@ -24,7 +24,7 @@
 }
 
 .main-header__content {
-    .limit-width-old;
+    .limit-width(@max-page-width);
     .clearfix;
     padding: 0 1em .5em 1em;
 }
