--- a/libs/site.less
+++ b/libs/site.less
@@ -107,6 +107,7 @@
 @import "mixins/callout";
 @import "mixins/fit-content";
 @import "mixins/flex-box";
+@import "mixins/limit-width";
 
 /* Module files */
 @import "modules/breadcrumb";
