--- a/libs/modules/breadcrumb.less
+++ b/libs/modules/breadcrumb.less
@@ -5,43 +5,17 @@
  * Functional changes to be made in 
  */
 
-.breadcrumb {
-    // Hack as we have Bootstrap in the mix
-    background-color: @white;
-    padding: 0;
-    font-size: @font-size-base;
-    p {
-        font-size: @font-size-base;
-        color: @beta-blue-light;
-        a {
-            padding: 0em @font-size-base*.5;
-            color: @text-color;
-            &:after {
-                content: "›";
-                font-size: @font-size-large;
-                color: @beta-blue-lighter;
-                padding-left: @font-size-base*.75;
-                padding-right: @font-size-base*.75;
-                background-color: @white;
-            }
-        }
-    }
-}
-
 .main-breadcrumb {
-    .limit-width();
-    padding: 0 1em;
-    margin-top: 1em;
-    margin-bottom: 1em;
+    padding: 0;
     clear: left;
     // Hack as we have Bootstrap in the mix
     background-color: @gray-7;
     padding: 0;
-    margin-top: 0;
     max-width: none;
     width: 100%;
 
-    .main-breadcrumb__content.breadcrumb {
+    .main-breadcrumb__content {
+        .limit-width;
         width: @screen-lg-min;
         margin: 0 auto;   
         background-color: transparent;
@@ -52,9 +26,9 @@
     }
 
     .breadcrumb__item {
-        font-size: @dap-font-size-base;
+        font-size: @font-size-base;
         color: @beta-blue-light;
-        line-height: (@dap-line-height-small * 2);
+        line-height: (@line-height-small * 2);
         
         &>i {
             margin: 0;
@@ -62,8 +36,8 @@
     }
     
     .breadcrumb__item a {
-        padding: 0em 0.5em 0 0;
-        color: @dap-text-color;
+        padding: 0em .5em 0 0;
+        color: @text-color;
     }
 
     @media( max-width: @screen-xs-max ) {
@@ -77,33 +51,38 @@
     }
 }
 
-// ..breadcrumb is a generic class for displaying breadcrumbs
+// .breadcrumb is a generic class for displaying breadcrumbs
 .breadcrumb__item {
-  white-space: nowrap;
- 
-  @media (max-width: @screen-xs-max ) {
-     white-space: normal;
-  }
+    white-space: nowrap;
 
-  .ie8 & {
+    @media (max-width: @screen-xs-max ) {
+        white-space: normal;
+    }
+
+    .ie8 & {
     // IE8 is having difficulty with the wrapping.  This fixes it
-    display: inline-block;
-  }
-}
-.breadcrumb__item > i {
-  margin: .5em;
+        display: inline-block;
+    }
+    
+    > i {
+        margin: .5em;
+    }
 }
 
 .breadcrumb__extent-link {
     background-color: @white;
     display: inline-block;
-    color: #000;
+    color: @black;
     padding: .1em .5em;
     white-space: nowrap;
     display: inline-block;
 
+    a {
+        border: none;
+    }
+
     &:link {
-        color: #000;
+        color: @black;
         text-decoration: none;
     }
 
@@ -124,18 +103,18 @@
 .breadcrumb__extent-popup {
     .popup;
     max-width: 400px;
-    margin-top: 1em;
+    margin-top: @box-spacing;
     // Bring things a little closer together in this popup
     p, ul {
-        margin: .5em 0;
+        margin: @box-spacing/2 0;
     }
 
     li {
         margin: 0;
     }
-}
 
-.breadcrumb__extent-popup__arrow {
-    .popup-arrow;
+    &__arrow {
+        .popup-arrow;
+    }
 }
 
