--- a/libs/site.less
+++ b/libs/site.less
@@ -87,7 +87,7 @@
 		@import "existing/inc/beta/sidebar-navigation";
 		@import "existing/inc/beta/sidebar-navigation-accordion";
 		//@import "existing/inc/beta/breadcrumb";
-		@import "existing/inc/beta/section-notice";
+		//@import "existing/inc/beta/section-notice"; Moved to modules
 		@import "existing/inc/beta/panels";
 		@import "existing/inc/beta/extent-switcher";
 		@import "existing/inc/beta/revealable";
@@ -116,3 +116,4 @@
 @import "modules/forms";
 @import "modules/nav-steps";
 @import "modules/navigation";
+@import "modules/section-notice";
