--- a/libs/site.less
+++ b/libs/site.less
@@ -89,7 +89,7 @@
 		//@import "existing/inc/beta/breadcrumb";
 		//@import "existing/inc/beta/section-notice"; Moved to modules
 		@import "existing/inc/beta/panels";
-		@import "existing/inc/beta/extent-switcher";
+		//@import "existing/inc/beta/extent-switcher";
 		@import "existing/inc/beta/revealable";
 
 		@import "existing/inc/beta/boxes";
