Add updated less files to site.less

--- a/libs/site.less
+++ b/libs/site.less
@@ -11,6 +11,7 @@
 @import "base/icons";
 @import "base/lists";
 @import "base/type";
+@import "base/utility";
 
 /* Vendor files */
 @import "vendors/normalize";
@@ -116,5 +117,9 @@
 @import "modules/forms";
 @import "modules/nav-steps";
 @import "modules/navigation";
-@import "modules/panels"
+@import "modules/panels";
 @import "modules/section-notice";
+@import "modules/decision-tree";
+@import "modules/extent-switcher";
+@import "modules/staff";
+@import "modules/status";
