--- a/libs/site.less
+++ b/libs/site.less
@@ -91,9 +91,8 @@
 		//@import "existing/inc/beta/section-notice"; Moved to modules
 		//@import "existing/inc/beta/panels";
 		//@import "existing/inc/beta/extent-switcher";
-		@import "existing/inc/beta/revealable";
-
-		@import "existing/inc/beta/boxes";
+		//@import "existing/inc/beta/revealable";
+		//@import "existing/inc/beta/boxes";
 
 	@import "existing/inc/header";
 	@import "existing/inc/footer-feedback";
@@ -121,5 +120,7 @@
 @import "modules/section-notice";
 @import "modules/decision-tree";
 @import "modules/extent-switcher";
+@import "modules/revealable";
 @import "modules/staff";
 @import "modules/status";
+@import "modules/boxes";
