Update sidebar-nvaigation.less and sidebar-navigation-accordion.less

--- a/libs/base/colors.less
+++ b/libs/base/colors.less
@@ -59,6 +59,7 @@
 @beta-green:            	#5E8E33;
 @beta-green-light:          lighten(@beta-green, 45%); // NEEDS TO BE CHECKED
 @beta-green-lighter:        lighten(@beta-green, 60%); // NEEDS TO BE CHECKED
+@beta-blue-darker:          #32457E;
 @beta-blue:      			#003C64;
 @beta-blue-light:       	#A5BDDC;
 //@beta-blue-lighter:  		lighten(@beta-blue-light, 15%);
