--- a/libs/modules/boxes.less
+++ b/libs/modules/boxes.less
@@ -1,4 +1,11 @@
-.beta-box() {
+/**
+ * BOXES
+ *
+ * Beta boxes.
+ *
+ */
+
+ .beta-box() {
     background-color: @gray-6-5;
     border-top-width: 4px;
 
