--- a/libs/modules/revealable.less
+++ b/libs/modules/revealable.less
@@ -1,4 +1,11 @@
-﻿.main-container {
+﻿/**
+ * REVEALABLE
+ *
+ * Beta revealable headers.
+ *
+ */
+
+ .main-container {
     .revealable {
         border: 1px solid @gray-6;
 
