--- a/libs/modules/section-notice.less
+++ b/libs/modules/section-notice.less
@@ -1,3 +1,10 @@
-﻿.section-notice__content {
+﻿/**
+ * SECTION NOTICE
+ *
+ * Need and use unknown.
+ * 
+ */
+
+ .section-notice__content {
     padding-top: 1em;
 }
