--- a/libs/site.less
+++ b/libs/site.less
@@ -85,8 +85,8 @@
 
 		@import "existing/inc/beta/base";
 		//@import "existing/inc/beta/status";
-		@import "existing/inc/beta/sidebar-navigation";
-		@import "existing/inc/beta/sidebar-navigation-accordion";
+		//@import "existing/inc/beta/sidebar-navigation";
+		//@import "existing/inc/beta/sidebar-navigation-accordion";
 		//@import "existing/inc/beta/breadcrumb";
 		//@import "existing/inc/beta/section-notice"; Moved to modules
 		//@import "existing/inc/beta/panels";
@@ -124,3 +124,5 @@
 @import "modules/staff";
 @import "modules/status";
 @import "modules/boxes";
+@import "modules/sidebar-navigation";
+@import "modules/sidebar-navigation-accordion";
