Clearout beta/colours and beta/variables files
• remove from site.less
• no more beta files

--- a/libs/modules/sidebar-navigation-accordion.less
+++ b/libs/modules/sidebar-navigation-accordion.less
@@ -59,7 +59,7 @@
         cursor: pointer;
         z-index: 2;
         font-size: @box-spacing*.875;
-        font-weight: @dap-font-weight-bolder;
+        font-weight: @font-weight-bolder;
         text-decoration: none;
         color: @heritage-blue;
         background: @beta-blue-light;
@@ -69,7 +69,7 @@
         transition: color .2s ease;
 
         &:hover {
-            color: @dap-blue-darker;
+            color: @beta-blue-darker;
         }
     }
 
@@ -86,7 +86,7 @@
 
         &.-current {
             .beta-dap-menu-accordion__link {
-                color: @dap-blue-darker;
+                color: @beta-blue-darker;
                 background-color: @beta-blue-light;
             }
         }
@@ -142,7 +142,7 @@
     transition: color .2s ease;
 
     &:hover {
-        color: @dap-blue-darker;
+        color: @beta-blue-darker;
         background-color: @gray-5;
     }
 }
