--- a/libs/site.less
+++ b/libs/site.less
@@ -12,6 +12,7 @@
 @import "base/lists";
 @import "base/type";
 @import "base/utility";
+// @import "base/base"; // This file has not been updated as shouldn't have been included
 
 /* Vendor files */
 @import "vendors/normalize";
@@ -20,7 +21,7 @@
 	//@import "existing/inc/magic-numbers";
 	//@import "existing/inc/mixins-flex-box";
 	//@import "existing/inc/mixins";
-	//@import "existing/inc/normalise";
+	//@import "existing/inc/normalise"; // Already used
 	@import "existing/inc/icons";
 	@import "existing/inc/helpers";
 	//@import "existing/inc/global"; Moved to base
@@ -79,11 +80,11 @@
 	@import "existing/inc/environment-marker";
 
 	// Beta files
-		@import "existing/inc/beta/colors";
-		@import "existing/inc/beta/variables";
+		//@import "existing/inc/beta/colors";
+		//@import "existing/inc/beta/variables";
 		//@import "existing/inc/beta/type";
 
-		@import "existing/inc/beta/base";
+		//@import "existing/inc/beta/base"; // This file has not been updated as shouldn't have been included
 		//@import "existing/inc/beta/status";
 		//@import "existing/inc/beta/sidebar-navigation";
 		//@import "existing/inc/beta/sidebar-navigation-accordion";
