--- a/libs/site.less
+++ b/libs/site.less
@@ -7,6 +7,7 @@
 @import "base/variables";
 @import "base/global";
 @import "base/ie";
+@import "base/forms";
 @import "base/framework";
 @import "base/icons";
 @import "base/lists";
@@ -112,9 +113,9 @@
 
 /* Module files */
 @import "modules/breadcrumb";
+@import "modules/cab-forms";
 @import "modules/callout";
 @import "modules/collapse";
-@import "modules/forms";
 @import "modules/nav-steps";
 @import "modules/navigation";
 @import "modules/panels";
