--- a/libs/site.less
+++ b/libs/site.less
@@ -13,18 +13,19 @@
 @import "base/lists";
 @import "base/type";
 @import "base/utility";
+@import "base/helpers";
 // @import "base/base"; // This file has not been updated as shouldn't have been included
 
 /* Vendor files */
 @import "vendors/normalize";
 
-// Exitsting styles
+// Existing styles
 	//@import "existing/inc/magic-numbers";
 	//@import "existing/inc/mixins-flex-box";
 	//@import "existing/inc/mixins";
 	//@import "existing/inc/normalise"; // Already used
 	@import "existing/inc/icons";
-	@import "existing/inc/helpers";
+	//@import "existing/inc/helpers";
 	//@import "existing/inc/global"; Moved to base
 	@import "existing/inc/boxes";
 	@import "existing/inc/highlight";
