Updated colours to include other sites background header colours
Leaving this mostly in tact as will probably separate public site
header from other in course.

--- a/libs/base/colors.less
+++ b/libs/base/colors.less
@@ -89,7 +89,6 @@
 @blue-40: #99B7C4;
 @blue-30: #B2C9DB;
 @blue-5: #F2F6F9;
-@casblue: #0057B9;
 @yellow: #FCBB69;
 @lightyellow: #FDE37E;
 @yellow-30: #FEF7D8;
@@ -111,6 +110,16 @@
 @dark-grey: #555;
 @notice-orange: #FFEBC6;
 @notice-orange-dark: #FFBF47;
+
+/***************************************************************************
+ * CORPORATE COLOURS
+*/
+
+@casblue: #0057B9;
+@advisernet-header: #CBE0E4;
+@bmis-header: #DDDAE1;
+@cablink-header: #FFE4C1;
+
 
 /***************************************************************************
  * STATE COLORS
