--- a/libs/site.less
+++ b/libs/site.less
@@ -97,7 +97,7 @@
 		//@import "existing/inc/beta/revealable";
 		//@import "existing/inc/beta/boxes";
 
-	@import "existing/inc/header";
+		//@import "existing/inc/header";
 	@import "existing/inc/footer-feedback";
 	@import "existing/inc/footer";
 	@import "existing/inc/title";
@@ -113,6 +113,7 @@
 @import "mixins/limit-width";
 
 /* Module files */
+@import "modules/header";
 @import "modules/breadcrumb";
 @import "modules/cab-forms";
 @import "modules/callout";
