--- a/libs/site.less
+++ b/libs/site.less
@@ -98,7 +98,7 @@
 		//@import "existing/inc/beta/boxes";
 
 		//@import "existing/inc/header";
-	@import "existing/inc/footer-feedback";
+		//@import "existing/inc/footer-feedback";
 	@import "existing/inc/footer";
 	@import "existing/inc/title";
 	@import "existing/inc/dialog";
@@ -130,3 +130,4 @@
 @import "modules/boxes";
 @import "modules/sidebar-navigation";
 @import "modules/sidebar-navigation-accordion";
+@import "modules/footer-feedback";
