--- a/libs/site.less
+++ b/libs/site.less
@@ -6,6 +6,7 @@
 @import "base/colors";
 @import "base/variables";
 @import "base/global";
+@import "base/buttons";
 @import "base/ie";
 @import "base/forms";
 @import "base/framework";
@@ -26,11 +27,11 @@
 	//@import "existing/inc/normalise"; // Already used
 	//@import "existing/inc/icons"; // Merged into base/icons.less
 	//@import "existing/inc/helpers";
-	//@import "existing/inc/global"; Moved to base
+	//@import "existing/inc/global"; // Moved to base
 	@import "existing/inc/boxes";
 	@import "existing/inc/highlight";
 
-	@import "existing/inc/buttons";
+	//@import "existing/inc/buttons"; // Moved to base
 	@import "existing/inc/forms";
 	@import "existing/inc/forms-v2";
 
