--- a/libs/modules/body.less
+++ b/libs/modules/body.less
@@ -21,13 +21,18 @@ section {
 
 
 .main-content {
-    //padding: 0 !important;
-    //max-width: 1024px;
+    padding: 0 !important;
+    max-width: 1024px !important;
 }
 #main {
     //padding: 0 2rem 0 4rem;
+    width: 70%;
 }
 
 #main-nav {
 	overflow: hidden !important;
+}
+
+.side-nav, .beta-extent-switcher {
+    width: 30% !important;
 }
