--- a/libs/modules/nav-steps.less
+++ b/libs/modules/nav-steps.less
@@ -1,24 +1,30 @@
 .steps {
-    .callout( @white, @callout-border: @gray-5, @callout-background: @gray-7 );
+    //.callout( @white, @callout-border: @gray-5, @callout-background: white );
     .callout--border;
-    .callout--border--left;
-    li a:hover, li a.active {
-        background-color: @gray-6;
+    //.callout--border--left;
+    .flex-row {
+        padding: 0;
+    }
+    ul {
+        margin: 0;
+        //padding: 0 1rem;
+        padding: 0 2rem;
+        //list-style: none;
     }
 }
 
 .steps--navigation {
-    .callout( @heritage-blue-lightest );
+    .callout( @heritage-blue-lightest, @callout-background: white );
     .callout--border;
     ul {
         //background-color: none !important;
     }
     li a:hover, li a.active {
-        background-color: @heritage-blue-lighter;
+        background-color: @gray-7;
     }
 }
 
-.steps, .steps--navigation {;
+.steps--navigation {;
     color: @text-color;
     margin-top: 0;
     padding-bottom: 0;
@@ -31,6 +37,7 @@
         background: none !important;
         list-style: none;
         padding: 0;
+        margin: 0;
         li {
             padding: 0 !important;
             margin: 0 !important;
