--- a/libs/modules/type.less
+++ b/libs/modules/type.less
@@ -85,7 +85,7 @@ small {
 
 a {
     color: @link-color;
-    text-decoration: none;
+    text-decoration: none !important;
     border-bottom: 0.0625rem solid lighten(@link-color, 60%);
     
     &:hover,
