--- a/libs/site.less
+++ b/libs/site.less
@@ -15,7 +15,7 @@
 @import "modules/breadcrumb";
 @import "modules/callout";
 @import "modules/collapse";
-@import "modules/forms";
+//@import "modules/forms";
 @import "modules/nav-steps";
 @import "modules/navigation";
 
