--- a/public/css/site.css
+++ b/public/css/site.css
@@ -14,8 +14,19 @@ body {
 section {
   margin-top: 2.5rem;
 }
+.main-content {
+  padding: 0 !important;
+  max-width: 1024px !important;
+}
+#main {
+  width: 70%;
+}
 #main-nav {
   overflow: hidden !important;
+}
+.side-nav,
+.beta-extent-switcher {
+  width: 30% !important;
 }
 /* Base */
 /**
@@ -144,9 +155,9 @@ pre {
   border: 0px #9f9f9f solid;
   padding: 0 1rem 0.75rem 1rem;
   margin: 0.75rem 0;
-  background-color: #dce5f1;
+  background-color: #f2f8ff;
   color: #191926;
-  border: 0px #80a2ce solid;
+  border: 0px #72b3ff solid;
   display: block;
   border-width: 1px;
   padding: 0.75rem 1rem;
@@ -222,7 +233,7 @@ pre h3 {
   font-size: 1.5rem;
 }
 pre a {
-  border-bottom-color: #80a2ce;
+  border-bottom-color: #72b3ff;
 }
 pre > *:first-child {
   padding-top: 0.75rem;
@@ -247,9 +258,9 @@ pre .callout__link {
   padding: 0.75rem 4.5rem 0.75rem 1rem;
   margin: 0.75rem -1rem -0.75rem -1rem !important;
   border: none;
-  background-color: #cad0ea;
+  background-color: #d9e1ff;
   color: #191926;
-  border-bottom: 1px solid #80a2ce;
+  border-bottom: 1px solid #72b3ff;
   text-decoration: none !important;
   position: relative;
 }
@@ -258,7 +269,7 @@ pre .callout__link:after {
   font-family: 'FontAwesome';
   content: "\f054";
   color: #191926;
-  background-color: #b7c0e3;
+  background-color: #bfcdff;
   height: 100%;
   position: absolute;
   right: 0;
@@ -268,11 +279,11 @@ pre .callout__link:after {
   text-align: center;
 }
 pre .callout__link:hover {
-  background-color: #b7c0e3;
+  background-color: #bfcdff;
   color: #191926;
 }
 pre .callout__link:hover:after {
-  background-color: #939fd5;
+  background-color: #8ca4ff;
 }
 pre .callout__link--anchor:after {
   content: "\f063";
@@ -1279,7 +1290,7 @@ th {
   width: 100%;
 }
 .flex-col-1-2 {
-  width: 50%;
+  width: 50% !important;
 }
 .flex-col-1-3 {
   width: 33.33333333%;
@@ -1380,7 +1391,7 @@ small {
 }
 a {
   color: #253460;
-  text-decoration: none;
+  text-decoration: none !important;
   border-bottom: 0.0625rem solid #ccd4eb;
 }
 a:hover,
@@ -1470,9 +1481,9 @@ hr {
 .callout {
   padding: 0 1rem 0.75rem 1rem;
   margin: 0.75rem 0;
-  background-color: #dce5f1;
+  background-color: #f2f8ff;
   color: #191926;
-  border: 0px #80a2ce solid;
+  border: 0px #72b3ff solid;
   display: block;
   border-width: 1px;
   border-left-width: 0.5rem;
@@ -1485,7 +1496,7 @@ hr {
   font-size: 1.5rem;
 }
 .callout a {
-  border-bottom-color: #80a2ce;
+  border-bottom-color: #72b3ff;
 }
 .callout > *:first-child {
   padding-top: 0.75rem;
@@ -1510,9 +1521,9 @@ hr {
   padding: 0.75rem 4.5rem 0.75rem 1rem;
   margin: 0.75rem -1rem -0.75rem -1rem !important;
   border: none;
-  background-color: #cad0ea;
+  background-color: #d9e1ff;
   color: #191926;
-  border-bottom: 1px solid #80a2ce;
+  border-bottom: 1px solid #72b3ff;
   text-decoration: none !important;
   position: relative;
 }
@@ -1521,7 +1532,7 @@ hr {
   font-family: 'FontAwesome';
   content: "\f054";
   color: #191926;
-  background-color: #b7c0e3;
+  background-color: #bfcdff;
   height: 100%;
   position: absolute;
   right: 0;
@@ -1531,11 +1542,11 @@ hr {
   text-align: center;
 }
 .callout .callout__link:hover {
-  background-color: #b7c0e3;
+  background-color: #bfcdff;
   color: #191926;
 }
 .callout .callout__link:hover:after {
-  background-color: #939fd5;
+  background-color: #8ca4ff;
 }
 .callout .callout__link--anchor:after {
   content: "\f063";
@@ -2501,337 +2512,36 @@ hr {
   border: solid #bf1d21;
   border-width: 1px;
 }
-/**
- * FORMS
- */
-fieldset {
-  padding: 0;
-  margin: 0;
-  border: 0;
-  min-width: 0;
-}
-legend {
-  display: block;
-  width: 100%;
-  padding: 0;
-  margin-bottom: 1rem;
-  font-size: 1.5rem;
-  line-height: inherit;
-  color: #404040;
-  border: 0;
-  border-bottom: 1px solid #004b88;
-}
-label {
-  display: inline-block;
-  max-width: 100%;
-  margin-bottom: 5px;
-  font-weight: bold;
-}
-input[type="radio"],
-input[type="checkbox"] {
-  margin: 4px 0 0;
-  margin-top: 1px \9;
-  line-height: normal;
-}
-input[type="file"] {
-  display: block;
-}
-input[type="range"] {
-  display: block;
-  width: 100%;
-}
-select[multiple],
-select[size] {
-  height: auto;
-}
-form .invalid {
-  display: none;
-  color: #df3034;
-  padding-top: 0.25rem;
-}
-form .valid {
-  display: none;
-  color: #5e8e33;
-  padding-top: 0.25rem;
-}
-fieldset {
-  margin-bottom: 1rem;
-}
-label {
-  display: block;
-  font-weight: normal;
-}
-form small {
-  color: #808080;
-}
-input,
-select,
-textarea {
-  border: 1px solid #dfdfdf;
-}
-textarea {
-  height: 5.5rem;
-  resize: vertical;
-}
-input[type="email"],
-input[type="password"],
-textarea,
-select {
-  width: 100%;
-  padding: 0.375rem 0.5rem;
-  border-radius: 2px;
-}
-input[type="email"]:focus:required:invalid,
-input[type="password"]:focus:required:invalid,
-textarea:focus:required:invalid,
-select:focus:required:invalid {
-  border-color: #df3034;
-}
-input[type="email"]:focus:required:invalid ~ .invalid,
-input[type="password"]:focus:required:invalid ~ .invalid,
-textarea:focus:required:invalid ~ .invalid,
-select:focus:required:invalid ~ .invalid {
-  display: block !important;
-}
-input[type="email"]:focus:required:valid,
-input[type="password"]:focus:required:valid,
-textarea:focus:required:valid,
-select:focus:required:valid {
-  border-color: #5e8e33;
-}
-input[type="email"]:focus:required:valid ~ .valid,
-input[type="password"]:focus:required:valid ~ .valid,
-textarea:focus:required:valid ~ .valid,
-select:focus:required:valid ~ .valid {
-  display: block !important;
-}
-input[type="email"]:focus,
-input[type="password"]:focus,
-textarea:focus,
-select:focus {
-  border-color: #229cff;
-  outline: none;
-}
-input[type="file"] {
-  border: none;
-  width: 100%;
-  outline: none;
-}
-/* Overrides 'Choose file' button
-input[type="file"]::-webkit-file-upload-button {
-  visibility: hidden;
-}
-input[type="file"]::before {
-  content: 'Choose';
-  display: inline-block;
-  overflow: hidden;
-  outline: none;
-  -webkit-user-select: none;
-  cursor: pointer;
-  border-radius: @form-border-radius;
-  background-color: @beta-green-light;
-  border: 1px solid @beta-green;
-  padding: @box-spacing-vertical/2 @box-spacing-horizontal/2;
-}
-*/
-/*
-.radio,
-.checkbox {
-  //background-color: @gray-7;
-  padding: @box-spacing-vertical/2 @box-spacing-horizontal/2;
-  cursor: pointer;
-  border: 1px solid @gray-6;
-  border-radius: @form-border-radius;
-  &:hover {
-    border-color: @gray-4;
-  }
-}
-*/
-.radio,
-.checkbox {
-  padding: 0.375rem 0.5rem;
-  cursor: pointer;
-  border-radius: 2px;
-  position: relative;
-  margin-right: 0.5rem;
-  z-index: 1;
-}
-.radio input:before,
-.checkbox input:before {
-  content: '';
-  display: block;
-  outline: none;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  position: absolute;
-  -webkit-user-select: none;
-  cursor: pointer;
-  border-radius: 2px;
-  border: 1px solid #dfdfdf;
-  z-index: -1;
-  background-color: #ececec;
-}
-.radio input:hover:before,
-.checkbox input:hover:before {
-  border-color: #bfbfbf;
-}
-.radio input:disabled,
-.checkbox input:disabled {
-  cursor: not-allowed !important;
-}
-.radio input:disabled:before,
-.checkbox input:disabled:before {
-  cursor: not-allowed !important;
-  background-color: #ececec;
-  border-color: #ececec;
-}
-.radio input:checked:before,
-.checkbox input:checked:before {
-  border-color: #dce5f1;
-  background-color: #dce5f1;
-}
-.radio input:checked:hover:before,
-.checkbox input:checked:hover:before {
-  border-color: #a5bddc;
-}
-.multi-select {
-  height: 5.5rem !important;
-  padding: 0;
-}
-.multi-select option {
-  padding: 0.375rem 0.5rem;
-}
-.dropdown {
-  border-radius: 2px;
-  border: 1px solid #dfdfdf;
-}
-.dropdown select {
-  background: none;
-  border: none;
-  cursor: pointer;
-}
-.checkbox,
-.radio {
-  display: inline-block;
-}
-*:disabled,
-.disabled {
-  cursor: not-allowed !important;
-  color: #9f9f9f;
-  background-color: #ececec;
-  border: none;
-  resize: none;
-}
-button[type="submit"] {
-  border-radius: 2px;
-  background-color: #b8e3df;
-  border: none;
-  color: #004b88;
-  padding: 0.75rem 1rem;
-  font-weight: bold;
-}
-button[type="submit"]:hover {
-  background-color: #6fc7be;
-}
 .steps {
-  padding: 0 1rem 0.75rem 1rem;
-  margin: 0.75rem 0;
-  background-color: #ececec;
-  color: #191926;
-  border: 0px #bfbfbf solid;
-  display: block;
   border-width: 1px;
-  border-left-width: 0.5rem;
-  padding-left: 1rem;
-}
-.steps h1,
-.steps h2,
-.steps h3 {
-  color: #ffffff !important;
-  font-size: 1.5rem;
-}
-.steps a {
-  border-bottom-color: #bfbfbf;
-}
-.steps > *:first-child {
-  padding-top: 0.75rem;
-}
-.steps h1:first-child,
-.steps h2:first-child,
-.steps h3:first-child,
-.steps h4:first-child,
-.steps h5:first-child,
-.steps h6:first-child {
-  margin-top: 0;
-}
-.steps li:first-child {
-  padding-top: 0;
-}
-.steps > *:last-child {
-  margin-bottom: 0 !important;
-}
-.steps .callout__link {
-  cursor: pointer;
-  display: block;
-  padding: 0.75rem 4.5rem 0.75rem 1rem;
-  margin: 0.75rem -1rem -0.75rem -1rem !important;
-  border: none;
-  background-color: #dfdfdf;
-  color: #191926;
-  border-bottom: 1px solid #bfbfbf;
-  text-decoration: none !important;
-  position: relative;
-}
-.steps .callout__link:after {
-  box-sizing: border-box;
-  font-family: 'FontAwesome';
-  content: "\f054";
-  color: #191926;
-  background-color: #d2d2d2;
-  height: 100%;
-  position: absolute;
-  right: 0;
-  top: 0;
-  line-height: 3em;
-  width: 3em;
-  text-align: center;
-}
-.steps .callout__link:hover {
-  background-color: #d2d2d2;
-  color: #191926;
-}
-.steps .callout__link:hover:after {
-  background-color: #b9b9b9;
-}
-.steps .callout__link--anchor:after {
-  content: "\f063";
 }
 .steps .callout__link:last-child {
   border: none;
 }
-.steps li a:hover,
-.steps li a.active {
-  background-color: #dfdfdf;
+.steps .flex-row {
+  padding: 0;
+}
+.steps ul {
+  margin: 0;
+  padding: 0 2rem;
 }
 .steps--navigation {
   padding: 0 1rem 0.75rem 1rem;
   margin: 0.75rem 0;
-  background-color: #f2f8ff;
+  background-color: white;
   color: #191926;
-  border: 0px #72b3ff solid;
+  border: 0px #bfbfbf solid;
   display: block;
   border-width: 1px;
 }
 .steps--navigation h1,
 .steps--navigation h2,
 .steps--navigation h3 {
-  color: #191926 !important;
+  color: #f2f8ff !important;
   font-size: 1.5rem;
 }
 .steps--navigation a {
-  border-bottom-color: #72b3ff;
+  border-bottom-color: #bfbfbf;
 }
 .steps--navigation > *:first-child {
   padding-top: 0.75rem;
@@ -2856,9 +2566,9 @@ button[type="submit"]:hover {
   padding: 0.75rem 4.5rem 0.75rem 1rem;
   margin: 0.75rem -1rem -0.75rem -1rem !important;
   border: none;
-  background-color: #d9e1ff;
+  background-color: #f2f2f2;
   color: #191926;
-  border-bottom: 1px solid #72b3ff;
+  border-bottom: 1px solid #bfbfbf;
   text-decoration: none !important;
   position: relative;
 }
@@ -2867,7 +2577,7 @@ button[type="submit"]:hover {
   font-family: 'FontAwesome';
   content: "\f054";
   color: #191926;
-  background-color: #bfcdff;
+  background-color: #e6e6e6;
   height: 100%;
   position: absolute;
   right: 0;
@@ -2877,11 +2587,11 @@ button[type="submit"]:hover {
   text-align: center;
 }
 .steps--navigation .callout__link:hover {
-  background-color: #bfcdff;
+  background-color: #e6e6e6;
   color: #191926;
 }
 .steps--navigation .callout__link:hover:after {
-  background-color: #8ca4ff;
+  background-color: #cccccc;
 }
 .steps--navigation .callout__link--anchor:after {
   content: "\f063";
@@ -2891,32 +2601,28 @@ button[type="submit"]:hover {
 }
 .steps--navigation li a:hover,
 .steps--navigation li a.active {
-  background-color: #d5ecff;
+  background-color: #ececec;
 }
-.steps,
 .steps--navigation {
   color: #191926;
   margin-top: 0;
   padding-bottom: 0;
 }
-.steps .title,
 .steps--navigation .title {
   padding: 0;
   text-decoration: none !important;
   border: none;
 }
-.steps ul,
 .steps--navigation ul {
   background: none !important;
   list-style: none;
   padding: 0;
+  margin: 0;
 }
-.steps ul li,
 .steps--navigation ul li {
   padding: 0 !important;
   margin: 0 !important;
 }
-.steps ul li a,
 .steps--navigation ul li a {
   cursor: pointer;
   display: block;
@@ -2926,28 +2632,20 @@ button[type="submit"]:hover {
   font-size: 0.875rem;
   padding: 0.5rem 1rem;
 }
-.steps--ordered a,
 .steps--navigation--ordered a {
   padding-left: 2rem !important;
 }
-.steps--ordered span,
 .steps--navigation--ordered span {
   font-weight: 900;
   margin-right: 0.5rem;
   margin-left: -1rem;
   color: #004b88;
 }
-.steps h1,
 .steps--navigation h1,
-.steps h2,
 .steps--navigation h2,
-.steps h3,
 .steps--navigation h3,
-.steps h4,
 .steps--navigation h4,
-.steps h5,
 .steps--navigation h5,
-.steps h6,
 .steps--navigation h6 {
   padding: 1rem 0 !important;
   margin: 0 !important;
