--- a/libs/site.less
+++ b/libs/site.less
@@ -100,9 +100,9 @@
 
 		//@import "existing/inc/header";
 		//@import "existing/inc/footer-feedback";
-	@import "existing/inc/footer";
-	@import "existing/inc/title";
-	@import "existing/inc/dialog";
+		//@import "existing/inc/footer";
+		//@import "existing/inc/title";
+		//@import "existing/inc/dialog";
 	@import "existing/inc/references";
 	@import "existing/inc/members";
 	@import "existing/inc/episerver";
@@ -115,6 +115,7 @@
 
 /* Module files */
 @import "modules/header";
+@import "modules/title";
 @import "modules/breadcrumb";
 @import "modules/cab-forms";
 @import "modules/callout";
@@ -132,3 +133,6 @@
 @import "modules/sidebar-navigation";
 @import "modules/sidebar-navigation-accordion";
 @import "modules/footer-feedback";
+@import "modules/footer";
+@import "modules/dialog";
+
