--- a/libs/base/variables.less
+++ b/libs/base/variables.less
@@ -165,6 +165,12 @@
 @box-spacing-horizontal:    		@box-spacing;
 @box-spacing-vertical:      		@box-spacing*.75;
 
+/***************************************************************************
+ * SHADOWS.
+ * Used for inner and outer shadows.
+ */
+
+@inner-shadow:  inset 0 10px 10px -13px, inset 0 -10px 10px -13px;
 
 /***************************************************************************
  * FORMS
