--- a/libs/site.less
+++ b/libs/site.less
@@ -103,7 +103,7 @@
 		//@import "existing/inc/footer";
 		//@import "existing/inc/title";
 		//@import "existing/inc/dialog";
-	@import "existing/inc/references";
+		//@import "existing/inc/references";
 	@import "existing/inc/members";
 	@import "existing/inc/episerver";
 
@@ -135,4 +135,5 @@
 @import "modules/footer-feedback";
 @import "modules/footer";
 @import "modules/dialog";
+@import "modules/references";
 
