--- a/libs/base/colors.less
+++ b/libs/base/colors.less
@@ -56,7 +56,7 @@
 @beta-orange:           	#F47738;
 @beta-orange-light:         lighten(@beta-orange, 20%); // NEEDS TO BE CHECKED
 @beta-orange-lighter:       lighten(@beta-orange, 40%); // NEEDS TO BE CHECKED
-@beta-green:            	#5E8E33;
+@beta-green:            	#537D2D;
 @beta-green-light:          lighten(@beta-green, 45%); // NEEDS TO BE CHECKED
 @beta-green-lighter:        lighten(@beta-green, 60%); // NEEDS TO BE CHECKED
 @beta-blue-darker:          #32457E;
